feat: create signin mechanism
